further fixes